# lapsify

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  TESTING.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
.kiro/specs/lapsify-gui/: design.md  requirements.md  tasks.md
ci/: github-ci.yml
src/: cli.rs  crop.rs  curve.rs  error.rs  exif.rs  gui.rs  lib.rs  main.rs  progress.rs  project.rs  raw.rs  render.rs  source.rs  timeline.rs
src/analysis/: deflicker.rs  holygrail.rs  keyframes.rs  luminance.rs  mod.rs
src/color/: lut.rs  mod.rs  tone.rs  transfer.rs
src/export/: ffmpeg.rs  images.rs  mod.rs  video.rs
src/gui/: main.rs
studio/: Cargo.toml
studio/macos/: Info.plist  bundle.sh
studio/src/: app.rs  document.rs  main.rs  native_menu.rs  theme.rs  worker.rs
studio/src/panels/: adjustments.rs  menu.rs  mod.rs  preview.rs  timeline.rs  toolbar.rs  workflow.rs
tests/: cli.rs  golden.rs  integration_test.rs
