[package]
name = "lapsify"
version = "0.1.1"
edition = "2021"
authors = ["Ferran Basora<fcsonline@gmail.com>"]
description = "A time-lapse image processor with adjustable parameters"
license = "MIT"
repository = "https://github.com/fcsonline/lapsify"
keywords = ["timelapse", "image", "video", "processing"]
categories = ["multimedia", "command-line-utilities"]

[[bin]]
name = "lapsify"
path = "src/main.rs"

[[bin]]
name = "lapsify-gui"
path = "src/gui.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = "0.24"
rayon = "1.8"
colored = "2.0"

# GUI dependencies
eframe = "0.26"
egui = "0.26"
egui_extras = "0.26"
rfd = "0.13" 