[package]
name = "lapsify"
version = "0.2.0"
edition = "2021"
authors = ["Ferran Basora<fcsonline@gmail.com>"]
description = "A time-lapse image processor with keyframable adjustments"
license = "MIT"
repository = "https://github.com/fcsonline/lapsify"
keywords = ["timelapse", "image", "video", "processing"]
categories = ["multimedia", "command-line-utilities"]

[lib]
name = "lapsify"
path = "src/lib.rs"

[[bin]]
name = "lapsify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rayon = "1.10"
colored = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
crossbeam-channel = "0.5"
indicatif = "0.17"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

[dev-dependencies]
approx = "0.5"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
